--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-@import "~yti-common-ui/theme/init";
+@import "~@vrk-yti/yti-common-ui/theme/init";
 @import '~bootstrap/scss/variables';
 
 $page-padding: 20px;
