--- a/src/app/components/commentround/comment-round.component.scss
+++ b/src/app/components/commentround/comment-round.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../node_modules/yti-common-ui/theme/variables';
+@import '~@vrk-yti/yti-common-ui/theme/variables';
 
 .bottom {
   margin-top: auto;
