--- a/src/app/components/common/hiararchical-comment-listitem.component.scss
+++ b/src/app/components/common/hiararchical-comment-listitem.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../node_modules/yti-common-ui/theme/variables';
+@import '~@vrk-yti/yti-common-ui/theme/variables';
 
 .name {
   color: black;
