--- a/src/app/components/form/search-linked-integration-container-modal.component.scss
+++ b/src/app/components/form/search-linked-integration-container-modal.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../node_modules/yti-common-ui/theme/variables';
+@import '~@vrk-yti/yti-common-ui/theme/variables';
 
 .input-group-search {
   width: 300px;
