--- a/src/app/components/userdetails/user-details.component.html
+++ b/src/app/components/userdetails/user-details.component.html
@@ -8,7 +8,7 @@
     <h2 translate>User details</h2>
   </div>
 
-  <ul ngbNav #nav="ngbNav" (navChange)="onNavChange($event)">
+  <ul ngbNav #nav="ngbNav" class="nav-tabs" (navChange)="onNavChange($event)">
     <li ngbNavItem="user_details_info_tab" id="user_details_info_tab">
       <a ngbNavLink>
         <span translate>INFORMATION</span>
@@ -25,7 +25,7 @@
       </a>
 
       <ng-template ngbNavContent>
-        <app-user-details-subscriptions [tabSet]="tabSet"></app-user-details-subscriptions>
+        <app-user-details-subscriptions [nav]="nav"></app-user-details-subscriptions>
       </ng-template>
     </li>
   </ul>
