--- a/src/app/components/navigation/navigation-bar.component.html
+++ b/src/app/components/navigation/navigation-bar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-light">
 
   <div class="navbar-header">
-    <a id="main_page_link" class="navbar-brand" href="/">
+    <a id="main_page_link" class="navbar-brand" [routerLink]="['/']">
       <!--<app-logo></app-logo>-->
       <span translate>Comments</span>
       <span *ngIf="environmentIdentifier">{{environmentIdentifier}}</span>
