--- a/src/app/components/navigation/navigation-bar.component.html
+++ b/src/app/components/navigation/navigation-bar.component.html
@@ -60,10 +60,10 @@
            [href]="configurationService.codelistUrl" target="_blank" rel="noopener noreferrer" translate>Reference Data</a>
         <a id="navigation_terminologies_link"
            class="dropdown-item"
-           [href]="configurationService.terminologyUrl" target="_blank" rel="noopener noreferrer" translate>Terminologies</a>
+           [href]="configurationService.terminologyUrl" target="_blank" rel="noopener noreferrer" translate>Terminology</a>
         <a id="navigation_data_vocabularies_link"
            class="dropdown-item"
-           [href]="configurationService.dataModelUrl" target="_blank" rel="noopener noreferrer" translate>Data Vocabularies</a>
+           [href]="configurationService.dataModelUrl" target="_blank" rel="noopener noreferrer" translate>Data models</a>
         <a class="dropdown-item"
            id="navigation_groupmanagement_link"
            *ngIf="showGroupManagementUrl()"
