footer component updated

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,6 @@
 </div>
 <app-footer [title]="'Comments' | translate"
             [version]="version"
-            (informationClick)="navigateToInformation()"></app-footer>
+            (informationClick)="navigateToInformation()"
+            (accessibilityClick)="navigateToAccessibility()"
+            (privacyClick)="navigateToPrivacy()"></app-footer>
